2010-02-16  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MakefileReaderExtension.cs:
	* MonoDevelop.Autotools.csproj: Remove usnused extension.

2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MakefileIntegrationFeature.cs: Track api changes.

2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.Autotools.MakefileSwitchEditor.cs:
	* gtk-gui/MonoDevelop.Autotools.GenerateMakefilesDialog.cs:
	* gtk-gui/MonoDevelop.Autotools.MakefileOptionPanelWidget.cs:
	* gtk-gui/MonoDevelop.Autotools.TarballBuilderEditorWidget.cs:
	* gtk-gui/MonoDevelop.Autotools.MakefileSwitchEditorWidget.cs:
	* gtk-gui/MonoDevelop.Autotools.MakefileIntegrationFeatureWidget.cs:
	  Flush.

2010-01-19  Michael Hutchinson  <mhutchinson@novell.com>

	* SolutionDeployer.cs: Fix Bug 572048 - Spelling mistake in
	  Packaging Output.

2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* Handler.cs:
	* MakefileData.cs:
	* ConfigSection.cs:
	* GenerateMakefilesDialog.cs:
	* SolutionMakefileHandler.cs:
	* SimpleProjectMakefileHandler.cs:
	* MakefileProjectServiceExtension.cs: Introduced the
	  ConfigurationSelector class to all methods that previously
	  took a configuration name as string. This eliminates the
	  ambiguity between solution configuration names and project
	  configuration names.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Autotools.addin.xml: Bump MD version.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MakefileOptionPanelWidget.cs: Improve error handling.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.Autotools.MakefileSwitchEditor.cs:
	* gtk-gui/MonoDevelop.Autotools.GenerateMakefilesDialog.cs:
	* gtk-gui/MonoDevelop.Autotools.MakefileOptionPanelWidget.cs:
	* gtk-gui/MonoDevelop.Autotools.MakefileSwitchEditorWidget.cs:
	* gtk-gui/MonoDevelop.Autotools.TarballBuilderEditorWidget.cs: