@@ -1,3 +1,8 @@
+2010-02-17  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MakefileData.cs: Fix assembly resolution issue when loading
+	  a project.
+
 2010-02-16  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Makefile.am:
